# orchestrapy

./: .gitignore  README.md  dummyagent.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: README.md
examples/support_tickets/: agent.py  app.py  schemas.py
orchestrapy/: __init__.py  base.py  context.py  registry.py
tests/: ValidationScript.py  smoke_test.py
